Resolves: tdf#77479 do not reset AutoFilter range for temporary operations

Change-Id: I22f5e74ca91eb188ce669762927dd25604a256ff